fix : 좋아요 기능 오류 수정 [#47]