@@ -1,48 +1,52 @@
 package hello.booktown.util;
 
+import lombok.AllArgsConstructor;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 @Getter
+@AllArgsConstructor
 public class CustomUserDetails implements UserDetails {
-    private Long userId;
-    private String email;
-    private String role;
 
-    // 생성자 등 생략
+    private final Long userId;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role));
+        return Collections.emptyList(); // 권한 없음
     }
 
     @Override
     public String getPassword() {
-        // 소셜 로그인에서는 비밀번호가 필요 없으므로 null 또는 빈 문자열 반환
-        return null;
+        return null; // 비밀번호 없음
     }
-
 
     @Override
     public String getUsername() {
-        return email;
+        return String.valueOf(userId); // userId를 username처럼 반환
     }
 
     @Override
-    public boolean isAccountNonExpired() { return true; }
+    public boolean isAccountNonExpired() {
+        return true; // 계정 만료되지 않음
+    }
 
     @Override
-    public boolean isAccountNonLocked() { return true; }
+    public boolean isAccountNonLocked() {
+        return true; // 계정 잠기지 않음
+    }
 
     @Override
-    public boolean isCredentialsNonExpired() { return true; }
+    public boolean isCredentialsNonExpired() {
+        return true; // 자격 증명 만료되지 않음
+    }
 
     @Override
-    public boolean isEnabled() { return true; }
+    public boolean isEnabled() {
+        return true; // 항상 활성화
+    }
 }
 
